Fix header to top on mobile.

--- a/source/scss/_application.scss
+++ b/source/scss/_application.scss
@@ -124,14 +124,15 @@ Header
     text-align: left;
     width: 100%;
     z-index: 20;
-
 }
 
 body.home #header
 {
     background: #f4726d url("../img/header.jpg") no-repeat;
-    height: 525px;
+    height: 535px;
     overflow: hidden;
+    padding-top: 20px;
+
     position: relative;
     text-align: center;
     width: 100%;
@@ -140,6 +141,7 @@ body.home #header
     @media only screen and (min-width: 500px) {
         height: 675px;
         padding-bottom: 0;
+        padding-top: 40px;
     }
 }
 
@@ -151,7 +153,7 @@ body.home #header
     width: 100%;
 
     @media only screen and (min-width: 500px) {
-        background-size: 150%;
+        background-size: 155%;
     }
 
     @media only screen and (min-width: 750px) {
@@ -169,10 +171,10 @@ body.dashboard #header
 
 #tagline
 {
-    width: 100%;
     margin: 0 auto;
     padding-top: 15px;
     position: relative;
+    width: 100%;
     z-index: 25;
 
     h1 {
@@ -214,7 +216,7 @@ body.dashboard #header
         }
 
         @media only screen and (min-width: 500px) {
-            padding-top: 30px;
+            padding-top: 40px;
 
             h1 {
                 font-size: 48px;
@@ -225,7 +227,7 @@ body.dashboard #header
             }
         }
 
-        @media only screen and (min-width: 900px) {
+        @media only screen and (min-width: 800px) {
             padding-top: 100px;
         }
     }
@@ -264,7 +266,7 @@ body.dashboard #header
         padding: 1em 1.35em;
         width: 50%;
 
-        @media only screen and (min-width: 600px) {
+        @media only screen and (min-width: 750px) {
             clear: none;
             display: inline-block;
             font-size: 1em;
@@ -274,7 +276,7 @@ body.dashboard #header
         }
     }
 
-    @media only screen and (min-width: 600px) {
+    @media only screen and (min-width: 750px) {
         padding-bottom: 0;
         padding-top: 25px;
     }
@@ -439,11 +441,20 @@ nav#primary
         opacity: 0.9;
         position: fixed;
         top: 0;
-        width: 100%;
     }
 
     &.expanded {
         opacity: 1;
+    }
+
+    @media only screen and (max-width: 800px) {
+        opacity: 0.9;
+        position: fixed;
+        top: 0;
+
+        &.fixed {
+
+        }
     }
 }
 
@@ -567,6 +578,12 @@ Content
             color: #222;
         }
     }
+
+    &.nav-fixed {
+        @media only screen and (min-width: 800px) {
+            padding-top: 75px;
+        }
+    }
 }
 
 /*
@@ -587,7 +604,7 @@ Pages
     float: left;
     width: 100%;
 
-    @media only screen and (min-width: 750px) {
+    @media only screen and (min-width: 800px) {
         padding-bottom: 25px;
         padding-top: 50px;
     }
@@ -610,11 +627,36 @@ Pages
         box-sizing: border-box;
         margin: 0;
 
-        @media only screen and (min-width: 544px) {
+        @media only screen and (min-width: 500px) {
             float: left;
             padding-right: 25px;
-            //        width: 25%;
-            width: 256px;
+            width: 50%;
+
+            &:nth-of-type(2n+1) {
+                clear: left;
+            }
+        }
+
+        @media only screen and (min-width: 750px) {
+            width: 33%;
+
+            &:nth-of-type(2n+1) {
+                clear: none;
+            }
+            &:nth-of-type(3n+1) {
+                clear: left;
+            }
+        }
+
+        @media only screen and (min-width: 1000px) {
+            width: 25%;
+
+            &:nth-of-type(3n+1) {
+                clear: none;
+            }
+            &:nth-of-type(4n+1) {
+                clear: left;
+            }
         }
     }
 }
@@ -929,13 +971,16 @@ Quotes
 
     ul li {
         font-size: 1rem;
-
         margin: 0 auto;
         margin-top: 1.5625rem;
         text-align: center;
 
         @media only screen and (min-width: 500px) {
             font-size: 1.125rem;
+            margin-top: 2.15rem;
+        }
+
+        @media only screen and (min-width: 750px) {
             margin-top: 3.75rem;
         }
 
