--- a/source/scss/_scaffolding.scss
+++ b/source/scss/_scaffolding.scss
@@ -6,7 +6,7 @@
     margin: 0 auto;
     padding: 0 1em;
 
-    @media only screen and (min-width: 1024px) {
+    @media only screen and (min-width: 1044px) {
         padding: 0;
         width: 1024px;
     }
